updated some styling

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,14 +11,14 @@
 <body>
     <header>
         <div class="header">
-            <h1 class="bigTitle">What's Nextflix?</h1>
+            <h1 class="bigTitle"><img src='/images/title.png'></h1>
             
             <p>The app designed to help you fill the void</p>
             <p class="description">Search Netflix content by title or by one of over 500 genres, add to your list to be watched. Once watched review content to add to your Watched List.</p>
         </div>
         <nav>
             <div class="nav-wrapper">
-              <a href="#!" class="brand-logo right">WN</a>
+              <a href="/" class="brand-logo right">WN</a>
               <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
               <ul class="left hide-on-med-and-down">
                 <% if (!currentUser){%>
