--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,9 +30,9 @@ h1{
   text-align: center;
 }
 h2{
-  color: black;
+  color: #E50916;
   text-align: center;
-  font-size: 36px;
+  font-size: 24px;
 }
 
 a {
@@ -249,4 +249,12 @@ label {
 .input-field input[type=text]:focus, .materialize-textarea:focus:not([readonly]) {
   border-bottom: 1px solid black !important;
   box-shadow: 0 1px 0 0 black !important;
+ }
+
+ .noShows {
+   margin: auto;
+ }
+
+ .list-titles{
+   font-size: 24px;
  }
